# min.ie

./: .gitignore  Containerfile  Dockerfile  LICENSE  Pipfile  Procfile  README.md  docker-compose.yml  manage.py  nginx.conf.sigil  pyproject.toml  renovate.json  requirements.txt
.forgejo/workflows/: build-image.yml  ci.yml
.github/: dependabot.yml
app/: forms.py  models.py  settings.py  tests.py  urls.py  views.py  wsgi.py
app/migrations/: 0001_initial.py
app/templates/: 404.html  index.html
links/: models.py  views.py
links/migrations/: 0001_initial.py  0002_auto_20150117_2248.py  0003_auto_20150117_2306.py  0004_auto_20150117_2338.py
links/templates/: 404.html  index.html
minie/: settings.py  urls.py  wsgi.py
project/: settings.py  urls.py  wsgi.py
static/: style.css
