[tool.poetry]
name = "min.ie"
version = "0.1.0"
description = ""
authors = ["Jonathan Cremin <jonathan@crem.in>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0"
dj-database-url = "^0.5.0"
gunicorn = "^20.0"
psycopg2-binary = "^2.8"
whitenoise = "^5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
