[project]
name = "min-ie"
version = "0.1.0"
description = "Makes links shorter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "dj-database-url>=3.0.1",
  "django>=5.2.7",
  "gunicorn>=23.0.0",
  "psycopg[binary]>=3.2.10",
  "whitenoise>=6.11.0",
  "opentelemetry-distro>=0.58b0",
  "opentelemetry-exporter-otlp>=1.37.0",
  "opentelemetry-instrumentation-django>=0.58b0",
]
